part-2/exercise_2.03/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app
  namespace: logoutput
  labels:
    app: pingpong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
      - name: pingpong-app
        image: juhosii/devops-kubernetes:2.01.2
        ports:
        - containerPort: 3002
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
