part-2/exercise_2.03/manifests/logoutput-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
  namespace: logoutput
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 3001
