part-2/exercise_2.03/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
  namespace: logoutput
spec:
  type: ClusterIP
  selector:
    app: pingpong-app
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 3002
